syntax = "proto3";

package quikdb.events;

option go_package = "github.com/quikdb/contracts-grpc/pkg/proto/events";

// Event streaming
message EventFilter {
  repeated string contract_addresses = 1;
  repeated string event_names = 2;
  uint64 from_block = 3;
  uint64 to_block = 4;
}

message StreamEventsRequest {
  EventFilter filter = 1;
  bool include_historical = 2;
}

message ContractEvent {
  string contract_address = 1;
  string event_name = 2;
  uint64 block_number = 3;
  string transaction_hash = 4;
  uint32 log_index = 5;
  map<string, string> args = 6; // Event arguments as key-value pairs
  uint64 timestamp = 7;
}

message StreamEventsResponse {
  ContractEvent event = 1;
}

// Event service
service EventService {
  rpc StreamEvents(StreamEventsRequest) returns (stream StreamEventsResponse);
}
